--- a/programming/c/release-notes/c-1.md
+++ b/programming/c/release-notes/c-1.md
@@ -8,6 +8,25 @@ needGenerateH3Content: false
 
 # Release Notes for C Edition - v1.x
 
+## 1.0.10 (09/29/2022)
+
+### New
+
+- Added a new method [`NormalizedImageResult_SaveToFile`](../api-reference/document-normalizer-result.md#normalizedimageresultsavetofile) to support saving the normalized image as a BMP/JPEG/PNG/PDF file.
+- Added PDF as a supported file format of method [`DDN_NormalizeFile`](../api-reference/document-normalizer-normalizing.md#ddnnormalizefile) and [`DDN_DetectQuadFromFile`](../api-reference/document-normalizer-normalizing.md#ddndetectquadfromfile).
+- Added a new attribute [`orientation`](../api-reference/image-data.md#orientation) in struct `ImageData`.
+
+### Changed
+
+- Updated [ErrorCode](../../enumerations/error-code.md)
+  - Added `DMERR_IMAGE_ORIENTATION_INVALID` (-10060).
+  - Change the value of `DDNERR_CONTENT_NOT_FOUND` from -10056 to -50001.
+  - Renamed `DDNERR_QUADRILATERAL_INVALID` to `DMERR_QUADRILATERAL_INVALID`.
+
+### Removed
+
+- Removed method `DDN_SaveImageDataToFile`
+
 ## 1.0.0 (06/21/2022)
 
 ### Highlights
