--- a/programming/c/release-notes/c-1.md
+++ b/programming/c/release-notes/c-1.md
@@ -12,20 +12,20 @@ needGenerateH3Content: false
 
 ### New
 
-- Added a new method [`NormalizedImageResult_SaveToFile`](../api-reference/document-normalizer-result.md#normalizedimageresultsavetofile) to support saving the normalized image as a BMP/JPEG/PNG/PDF file.
-- Added PDF as a supported file format of method [`DDN_NormalizeFile`](../api-reference/document-normalizer-normalizing.md#ddnnormalizefile) and [`DDN_DetectQuadFromFile`](../api-reference/document-normalizer-normalizing.md#ddndetectquadfromfile).
-- Added a new attribute [`orientation`](../api-reference/image-data.md#orientation) in struct `ImageData`.
+- Added a new method [`NormalizedImageResult_SaveToFile`]({{ site.c_api }}document-normalizer-result.html#normalizedimageresult_savetofile) to support saving the normalized image as a BMP/JPEG/PNG/PDF file.
+- Added PDF as a supported file format of method [`DDN_NormalizeFile`]({{ site.c_api }}document-normalizer-normalizing.html#ddn_normalizefile) and [`DDN_DetectQuadFromFile`]({{ site.c_api }}document-normalizer-normalizing.html#ddn_detectquadfromfile).
+- Added a new attribute [`orientation`]({{ site.c_api }}image-data.html#orientation) in struct `ImageData`.
+- Added error code `DMERR_IMAGE_ORIENTATION_INVALID`.
 
 ### Changed
 
-- Updated [ErrorCode](../../enumerations/error-code.md)
-  - Added `DMERR_IMAGE_ORIENTATION_INVALID` (-10060).
+- Updated [ErrorCode]({{ site.enumerations }}error-code.html?src=c)
   - Change the value of `DDNERR_CONTENT_NOT_FOUND` from -10056 to -50001.
   - Renamed `DDNERR_QUADRILATERAL_INVALID` to `DMERR_QUADRILATERAL_INVALID`.
 
 ### Removed
 
-- Removed method `DDN_SaveImageDataToFile`
+- Removed method `DDN_SaveImageDataToFile`.
 
 ## 1.0.0 (06/21/2022)
 
