--- a/programming/c/release-notes/c-1.md
+++ b/programming/c/release-notes/c-1.md
@@ -8,6 +8,12 @@ needGenerateH3Content: false
 
 # Release Notes for C Edition - v1.x
 
+## 1.0.20 (02/02/2023)
+
+### Fixed
+
+- Fixed a bug that the colours of binarized images might be inverted when using [`LEM_MARGIN_BASED`]({{site.parameters}}reference/line-extraction-modes.html) mode for `LineExtractionModes`.
+
 ## 1.0.10 (09/29/2022)
 
 ### New
